--- a/SwimmingSchool_MVC/Views/Events/Index.cshtml
+++ b/SwimmingSchool_MVC/Views/Events/Index.cshtml
@@ -3,8 +3,12 @@
 @{
     ViewData["Title"] = "Події";
 }
+<!-- Шапка з логотипом -->
+<div class="text-center my-4">
+    <img src="~/assets/LogoSwim.png" alt="Логотип" style="width: 1300px; max-height: 400px;">
+</div>
 
-<h1 class="text-center my-4">Події</h1>
+@* <h1 class="text-center my-4">Події</h1> *@
 
 <div class="d-flex justify-content-between align-items-center" style="padding-block-end: 10px">
     <a asp-action="Create" class="btn btn-outline-success">Створити нову подію</a>
