--- a/SwimmingSchool_MVC/Views/Groups/Index.cshtml
+++ b/SwimmingSchool_MVC/Views/Groups/Index.cshtml
@@ -21,7 +21,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div>
                             <h5 class="mb-0">@item.GroupName</h5>
-                            <p class="mb-0"><b>Тренер:</b> @item.Trainer.FirstName @item.Trainer.LastName @item.Trainer.MiddleName, <b>Тип групи:</b> @item.GroupType.Name</p>
+                            <p class="mb-0"><b>Тренер:</b> @item.Trainer.LastName @item.Trainer.FirstName @item.Trainer.MiddleName, <b>Тип групи:</b> @item.GroupType.Name</p>
                         </div>
                         <div class="dropdown">
                             <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
