--- a/SwimmingSchool_MVC/Views/Events/Index.cshtml
+++ b/SwimmingSchool_MVC/Views/Events/Index.cshtml
@@ -3,12 +3,11 @@
 @{
     ViewData["Title"] = "Події";
 }
-<!-- Шапка з логотипом -->
+
 <div class="text-center my-4">
-    <img src="~/assets/LogoSwim.png" alt="Логотип" style="width: 1300px; max-height: 400px;">
+    <img src="https://eventsmspicture.blob.core.windows.net/swimmingeventsimage/LogoSwim.png?sp=r&st=2024-10-30T19:12:38Z&se=2024-11-02T03:12:38Z&spr=https&sv=2022-11-02&sr=b&sig=cPYYw%2FEG6o61dsWhGu3vm0yrb6TMBPMOQ8y3zzGCc9M%3D" alt="Логотип" style="width: 1300px; max-height: 400px;">
 </div>
 
-@* <h1 class="text-center my-4">Події</h1> *@
 
 <div class="d-flex justify-content-between align-items-center" style="padding-block-end: 10px">
     <a asp-action="Create" class="btn btn-outline-success">Створити нову подію</a>
@@ -84,7 +83,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        var map = L.map('map').setView([50.4501, 30.5234], 12); // Центр на Київ
+        var map = L.map('map').setView([50.4501, 30.5234], 12);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
@@ -92,35 +91,31 @@
         var markers = [];
         var eventCoordinates = @Html.Raw(Json.Serialize(ViewBag.EventCoordinates));
 
-        console.log("Event coordinates:", eventCoordinates); // Лог для перевірки
+        console.log("Event coordinates:", eventCoordinates); 
 
 
-        // Функція для створення міток на карті з використанням геокодування адрес
         function createMarkers() {
-            // Очищуємо попередні мітки
+            
             markers.forEach(marker => map.removeLayer(marker));
             markers = [];
-
-            // Отримуємо стан чекбоксів
+            
             var showFutureEvents = document.getElementById('futureEvents').checked;
             var showPastEvents = document.getElementById('pastEvents').checked;
-
-            // Проходимо по кожній події і виконуємо геокодування адреси
+            
             document.querySelectorAll('.event-card').forEach(card => {
                 var location = card.getAttribute('data-location');
                 var isHeld = card.getAttribute('data-held') === "True";
-                var eventId = card.getAttribute('data-id').toString(); // Приводимо до рядка
+                var eventId = card.getAttribute('data-id').toString();
                 if (eventCoordinates[eventId] === undefined) {
                     console.warn(`Coordinates for event ID ${eventId} are missing in ViewBag.`);
                 }
-                // Фільтруємо події на основі чекбоксів
+                
                 if ((isHeld && showPastEvents) || (!isHeld && showFutureEvents)) {
                     if (eventCoordinates[eventId]) {
                         var coordinates = eventCoordinates[eventId];
                         var lat = parseFloat(coordinates.lat);
                         var lng = parseFloat(coordinates.lng);
 
-                        // Перевіряємо, чи координати дійсно визначені
                         if (!isNaN(lat) && !isNaN(lng)) {
                             var iconUrl = isHeld
                                 ? '@Url.Content("~/assets/pin-map.png")'
